RESOLVED FIXED22088
[Transforms] Rotation transition leaves behind garbage and renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=22088
Summary [Transforms] Rotation transition leaves behind garbage and renders incorrectly
Chris Marrin
Reported 2008-11-05 14:41:18 PST
Using WebKit nightlies r38068. Open the attached testcase and hover over the outlined box. The boxes rotate, but leave behind cruft and are rendered incorrectly when they get to their rotated state.
Attachments
testcase showing bug (921 bytes, text/html)
2008-11-05 14:42 PST, Chris Marrin
no flags
Patch, testcase, changelog (7.27 KB, patch)
2008-12-06 22:06 PST, Simon Fraser (smfr)
koivisto: review+
Chris Marrin
Comment 1 2008-11-05 14:42:13 PST
Created attachment 24919 [details] testcase showing bug
Eric Bailey
Comment 2 2008-11-24 23:08:43 PST
Here's another test case which is similar to the reported bug: http://homepage.mac.com/ebailey/webkit/exp7/index.html Artifacts can be seen in the reflection after a 10 degree rotation. These artifacts appear in all cases except when not rotated.
Simon Fraser (smfr)
Comment 3 2008-11-25 16:06:17 PST
The first testcase mostly works, but there are still some jaggies left around. The second testcase is a separate issue; please file another bug.
Simon Fraser (smfr)
Comment 4 2008-12-06 22:06:04 PST
Created attachment 25826 [details] Patch, testcase, changelog
Simon Fraser (smfr)
Comment 5 2008-12-06 22:15:48 PST
Committed r39078 M WebCore/ChangeLog M WebCore/rendering/RenderObject.cpp A LayoutTests/platform/mac/fast/repaint/transform-repaint-descendants-expected.png A LayoutTests/platform/mac/fast/repaint/transform-repaint-descendants-expected.checksum A LayoutTests/platform/mac/fast/repaint/transform-repaint-descendants-expected.txt M LayoutTests/ChangeLog A LayoutTests/fast/repaint/transform-repaint-descendants.html r39078 = c7cac524ee5576a4ce13f247ec857214e20cbde5 (trunk)
Note You need to log in before you can comment on or make changes to this bug.