WebCore/rendering/RenderObject.cpp
@@ -2277,15 +2277,16 @@ void RenderObject::styleWillChange(RenderStyle::Diff diff, const RenderStyle* ne
         if (diff == RenderStyle::Layout) {
             // When a layout hint happens, we go ahead and do a repaint of the layer, since the layer could
             // end up being destroyed.
-            if (hasLayer() &&
-                (m_style->position() != newStyle->position() ||
-                 m_style->zIndex() != newStyle->zIndex() ||
-                 m_style->hasAutoZIndex() != newStyle->hasAutoZIndex() ||
-                 !(m_style->clip() == newStyle->clip()) ||
-                 m_style->hasClip() != newStyle->hasClip() ||
-                 m_style->opacity() != newStyle->opacity()))
+            if (hasLayer()) {
+                if (m_style->position() != newStyle->position() ||
+                    m_style->zIndex() != newStyle->zIndex() ||
+                    m_style->hasAutoZIndex() != newStyle->hasAutoZIndex() ||
+                    !(m_style->clip() == newStyle->clip()) ||
+                    m_style->hasClip() != newStyle->hasClip() ||
+                    m_style->opacity() != newStyle->opacity() ||
+                    m_style->transform() != newStyle->transform())
                 layer()->repaintIncludingDescendants();
-            else if (m_style->transform() != newStyle->transform()) {
+            } else if (m_style->transform() != newStyle->transform()) {
                 // If we don't have a layer yet, but we are going to get one because of a transform change, then
                 // we need to repaint the old position of the object
                 repaint();
